<resources>
    <string name="app_name">BikeApp</string>
    <string name="register">Register</string>
    <string name="register_title">Register to BikeApp</string>
    <string name="login_title">Log in to BikeApp</string>
    <string name="favorite_title">Add favorite location</string>
    <string name="event_title">Add new event</string>
    <string name="time_picker_title">Set the time of the event</string>
    <string name="date_picker_title">Set the date of the event</string>
    <string name="login">Log In</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Retype password:</string>
    <string name="description">Description:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="loading">Loading...</string>
    <string name="loading_register">Sending registration request...</string>
    <string name="login_wait">Logging in...</string>
    <string name="logout_wait">Logging out...</string>
    <string name="save_location_wait">Saving location...</string>
    <string name="save_event_wait">Saving event...</string>
    <string name="save_favorite_wait">Saving favorite...</string>
    <string name="loading_favorites_wait">Loading favorites...</string>
    <string name="loading_events_wait">Loading events...</string>
    <string name="info_registered">User registered. ObjectId: %s</string>
    <string name="info_logging">Logged in. ObjectId: %s</string>
    <string name="menu_show_track">Tracks</string>
    <string name="menu_select_start">Start</string>
    <string name="menu_select_end">End</string>
    <string name="menu_route">Route</string>
    <string name="credits">Developed by Leu Radu using Scout and Backendless</string>

    <string name="shortest">Shortest</string>
    <string name="fastest">Fastest</string>
    <string name="quiet">Quiet</string>

    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>

</resources>
