<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_routing"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/black_transparent"
              android:visibility="gone">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <Button
            android:id="@+id/button_route_shortest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/small"
            android:text="@string/shortest"
            android:textAllCaps="false"
            android:textSize="@dimen/medium_text"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/button_route_fastest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/small"
            android:text="@string/fastest"
            android:textAllCaps="false"
            android:textSize="@dimen/medium_text"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/button_route_quiet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/small"
            android:text="@string/quiet"
            android:textAllCaps="false"
            android:textSize="@dimen/medium_text"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="12"
        android:paddingBottom="@dimen/small">

        <TextView
            android:id="@+id/text_routing_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="0m"
            android:textSize="@dimen/medium_text"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/text_routing_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="0min"
            android:textSize="@dimen/medium_text"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            />

        <ImageButton
            android:id="@+id/button_close_routing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:background="@null"/>

    </LinearLayout>

</LinearLayout>